[feature] Add RJ service
With a help of Text-To-Speech(TTS) admin can enable radio-jockey mode.
In this mode, an announcement is made about the previous and two
upcoming songs.

Test: Adds few unit tests.

TODO: This is manually tested. Need to spin up TTS service from
integration tests to verify.
